--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 </head>
 
 <body>
+    <footer id='footer' role='contentinfo'>
+        <div class='container'>
+            <a class='logo' href='' rel='home'>SHINE LINE MIRRORS</a>
+            <a class='copy' href='tel:8667313013' target='_blank'>+91 866 731 3013</a>
+            <a class='copy' href='mailto:manojsaran98@gmail.com' target='_blank'>manojsaran98@gmail.com</a>
+        </div>
+    </footer>
     <article class='gallery'>
         <a class='gallery-link' href='images/01.jpg'>
             <figure class='gallery-image'>
